--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -17,15 +17,21 @@
   },
   "dependencies": {
     "@heroicons/react": "~2.1.5",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@rainbow-me/rainbowkit": "2.2.7",
     "@tanstack/react-query": "~5.59.15",
     "@uniswap/sdk-core": "~5.8.2",
     "@uniswap/v2-sdk": "~4.6.1",
     "blo": "~1.2.0",
     "burner-connector": "0.0.16",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "daisyui": "5.0.9",
+    "framer-motion": "^12.23.12",
     "ipfs-utils": "^9.0.14",
     "kubo-rpc-client": "^3.0.1",
+    "lucide-react": "^0.541.0",
     "next": "~15.2.3",
     "next-nprogress-bar": "~2.3.13",
     "next-themes": "~0.3.0",
@@ -34,6 +40,7 @@
     "react-dom": "~19.0.0",
     "react-hot-toast": "~2.4.0",
     "react-json-view": "^1.21.3",
+    "tailwind-merge": "^3.3.1",
     "usehooks-ts": "~3.1.0",
     "viem": "2.31.1",
     "wagmi": "2.15.6",
