--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -11,6 +11,7 @@
     "lint": "next lint",
     "serve": "next start",
     "start": "next dev",
+    "dead-exports": "ts-prune",
     "vercel": "vercel --build-env YARN_ENABLE_IMMUTABLE_INSTALLS=false --build-env ENABLE_EXPERIMENTAL_COREPACK=1 --build-env VERCEL_TELEMETRY_DISABLED=1",
     "vercel:login": "vercel login",
     "vercel:yolo": "vercel --build-env YARN_ENABLE_IMMUTABLE_INSTALLS=false --build-env ENABLE_EXPERIMENTAL_COREPACK=1 --build-env NEXT_PUBLIC_IGNORE_BUILD_ERROR=true --build-env VERCEL_TELEMETRY_DISABLED=1"
@@ -47,6 +48,7 @@
     "zustand": "~5.0.0"
   },
   "devDependencies": {
+    "ts-prune": "~0.10.3",
     "@tailwindcss/postcss": "4.0.15",
     "@trivago/prettier-plugin-sort-imports": "~4.3.0",
     "@types/node": "~18.19.50",
